k8s/service.yml
  
apiVersion: v1
kind: Service
metadata:
  name: k8s-petclinic-svc
  namespace: petclinic
spec:
  selector:
    app: petclinic
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  #type: LoadBalancer
