k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: petclinic-ingress
 namespace: petclinic
 annotations:
   kubernetes.io/ingress.class: nginx
spec:
 rules:
 - host: petclinic.charanco.xyz
   http:
     paths:
     - path:
       backend:
         serviceName: k8s-petclinic-svc
         servicePort: 80
